objects/Staff_Profile__c.object
<CustomObject>
    <description>Holds additional staff information like concierge and enthusiast bios</description>
    <fields>
        <fullName>Bio__c</fullName>
        <label>Bio</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>User_ID__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <label>Home Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_Web_Link__c</fullName>
        <description>Link to page in Ops Web for this Staff Profile</description>
        <formula>&apos;https://shiftcars1.appspot.com/ops/staff-profiles/&apos; &amp; CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ops Web Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking_Lot_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parking Lot</label>
        <referenceTo>Parking_Lot__c</referenceTo>
        <relationshipLabel>Staff Profiles</relationshipLabel>
        <relationshipName>Staff_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personal_Photo_Content_ID__c</fullName>
        <label>Personal Photo Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Photo_Content_ID__c</fullName>
        <label>Professional Photo Content ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_ID__c</fullName>
        <description>A reference field that links back to its Staff Profile.</description>
        <displayFormat>e{0}</displayFormat>
        <externalId>true</externalId>
        <label>Public ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Staff Profiles</relationshipLabel>
        <relationshipName>Staff_Profiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skedulo_Resource_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skedulo Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Staff Profiles</relationshipLabel>
        <relationshipName>Staff_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The unique User associated to this profile</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Staff_Profile</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Staff Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Skedulo_Resource_ID__c</columns>
        <columns>User_ID__c</columns>
        <columns>Region_ID__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Staff Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>